--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-carousel": "^4.3.0",
     "react-dom": "17.0.1",
-    "react-lazy-load-image-component": "^1.5.0"
+    "react-lazy-load-image-component": "^1.5.0",
+    "react-scroll": "^1.8.1"
   }
 }
