--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-carousel": "^4.3.0",
     "react-dom": "17.0.1",
     "react-lazy-load-image-component": "^1.5.0",
+    "react-responsive-carousel": "^3.2.10",
     "react-scroll": "^1.8.1"
   }
 }
