--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^3.12.2",
     "next": "10.0.2",
     "normalize.css": "^8.0.1",
+    "notistack": "^1.0.1",
     "react": "17.0.1",
     "react-carousel": "^4.3.0",
     "react-dom": "17.0.1",
