--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-image-lightbox": "^5.1.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-responsive-carousel": "^3.2.10",
-    "react-scroll": "^1.8.1"
+    "react-scroll": "^1.8.1",
+    "react-waypoint": "^9.0.3"
   }
 }
