--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean":"rm -rf node_modules/",
     "dev": "next dev",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
