--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.1",
     "react-image-lightbox": "^5.1.1",
     "react-lazy-load-image-component": "^1.5.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-responsive-carousel": "^3.2.10",
     "react-scroll": "^1.8.1",
     "react-waypoint": "^9.0.3"
